[package]
name = "good-boy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sentry = "0.30.0"
tokio = { version = "1.26.0", features = ["full"] }

dotenv = "0.15.0"
url = "2.3.1"
regex = "1.7.2"
minidom = "0.15.1"
reqwest = "0.11.15"